--- a/TwitterApp/Base.lproj/Main.storyboard
+++ b/TwitterApp/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Login View Controller-->
@@ -50,6 +51,141 @@
                     <view key="view" contentMode="scaleToFill" id="L7S-tF-15M">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="163" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JjD-Qz-zB8">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TwitterCell" rowHeight="163" id="uz2-4l-bpb" customClass="TwitterCell" customModule="TwitterApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="92" width="320" height="163"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uz2-4l-bpb" id="uxO-NW-Z4g">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="162"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Text text text text text text text text text text text text text " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SBS-hO-exh">
+                                                    <rect key="frame" x="89" y="62" width="223" height="61"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="5h" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qxn-JG-vE0">
+                                                    <rect key="frame" x="292" y="8" width="20" height="29"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="John Smith" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VTo-E2-Ng4">
+                                                    <rect key="frame" x="89" y="16" width="93" height="21"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hCb-Gj-5pa">
+                                                    <rect key="frame" x="16" y="16" width="65" height="65"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="65" id="2AU-j2-JYv"/>
+                                                        <constraint firstAttribute="width" constant="65" id="Ff1-YW-5fl"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Re-tweet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PiV-Dx-srv">
+                                                    <rect key="frame" x="178" y="131" width="59" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Like" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nyg-iD-YN7">
+                                                    <rect key="frame" x="277" y="131" width="27" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i73-Il-hGa">
+                                                    <rect key="frame" x="143" y="125" width="30" height="30"/>
+                                                    <state key="normal" title="R"/>
+                                                    <connections>
+                                                        <action selector="onRetweetButton:" destination="uz2-4l-bpb" eventType="touchUpInside" id="Ryj-Kd-oWd"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bHS-gY-beS">
+                                                    <rect key="frame" x="242" y="125" width="30" height="30"/>
+                                                    <state key="normal" title="L"/>
+                                                    <connections>
+                                                        <action selector="onLikeButton:" destination="uz2-4l-bpb" eventType="touchUpInside" id="iXT-t2-81I"/>
+                                                    </connections>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@John Smith" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DuS-ml-X5z">
+                                                    <rect key="frame" x="89" y="40" width="86" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="hCb-Gj-5pa" firstAttribute="top" secondItem="uxO-NW-Z4g" secondAttribute="topMargin" constant="8" id="3mt-c7-BD9"/>
+                                                <constraint firstItem="VTo-E2-Ng4" firstAttribute="leading" secondItem="hCb-Gj-5pa" secondAttribute="trailing" constant="8" id="5IW-ab-HRe"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="hCb-Gj-5pa" secondAttribute="bottom" constant="12" id="8Wf-1S-LXD"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Nyg-iD-YN7" secondAttribute="bottom" constant="5" id="DY7-2g-f7s"/>
+                                                <constraint firstItem="Nyg-iD-YN7" firstAttribute="leading" secondItem="bHS-gY-beS" secondAttribute="trailing" constant="5" id="EIG-VP-GGx"/>
+                                                <constraint firstItem="DuS-ml-X5z" firstAttribute="top" secondItem="SBS-hO-exh" secondAttribute="bottom" constant="8" id="EpY-RJ-sfb"/>
+                                                <constraint firstItem="SBS-hO-exh" firstAttribute="leading" secondItem="hCb-Gj-5pa" secondAttribute="trailing" constant="8" id="JUG-Tm-lkS"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Nyg-iD-YN7" secondAttribute="trailing" constant="8" id="LlI-jd-FoV"/>
+                                                <constraint firstItem="VTo-E2-Ng4" firstAttribute="leading" secondItem="hCb-Gj-5pa" secondAttribute="trailing" constant="8" id="NAy-U3-rA9"/>
+                                                <constraint firstItem="SBS-hO-exh" firstAttribute="top" secondItem="DuS-ml-X5z" secondAttribute="bottom" constant="5" id="Nyz-RB-HnX"/>
+                                                <constraint firstAttribute="trailing" secondItem="SBS-hO-exh" secondAttribute="trailing" constant="8" id="O0z-ot-7LJ"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="DuS-ml-X5z" secondAttribute="bottom" constant="5" id="RTn-zq-hYx"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="SBS-hO-exh" secondAttribute="bottom" constant="8" id="RUh-As-kO4"/>
+                                                <constraint firstItem="qxn-JG-vE0" firstAttribute="top" secondItem="uxO-NW-Z4g" secondAttribute="top" constant="8" id="TM8-x8-sbx"/>
+                                                <constraint firstItem="PiV-Dx-srv" firstAttribute="leading" secondItem="i73-Il-hGa" secondAttribute="trailing" constant="5" id="Vv2-HJ-Q3Q"/>
+                                                <constraint firstAttribute="trailing" secondItem="qxn-JG-vE0" secondAttribute="trailing" constant="8" id="Vzb-4W-pv6"/>
+                                                <constraint firstItem="bHS-gY-beS" firstAttribute="leading" secondItem="PiV-Dx-srv" secondAttribute="trailing" constant="5" id="Yjt-OI-bLg"/>
+                                                <constraint firstItem="DuS-ml-X5z" firstAttribute="top" secondItem="VTo-E2-Ng4" secondAttribute="bottom" constant="3" id="ccM-8D-fMX"/>
+                                                <constraint firstItem="DuS-ml-X5z" firstAttribute="top" secondItem="SBS-hO-exh" secondAttribute="bottom" constant="8" id="cgo-g8-3DG"/>
+                                                <constraint firstItem="bHS-gY-beS" firstAttribute="centerY" secondItem="i73-Il-hGa" secondAttribute="centerY" id="fIs-m1-LZF"/>
+                                                <constraint firstItem="qxn-JG-vE0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="VTo-E2-Ng4" secondAttribute="trailing" constant="3" id="h4W-hm-JBU"/>
+                                                <constraint firstItem="hCb-Gj-5pa" firstAttribute="leading" secondItem="uxO-NW-Z4g" secondAttribute="leadingMargin" constant="8" id="jrY-4x-ihk"/>
+                                                <constraint firstItem="Nyg-iD-YN7" firstAttribute="top" secondItem="SBS-hO-exh" secondAttribute="bottom" constant="8" id="kvC-YA-5bm"/>
+                                                <constraint firstItem="Nyg-iD-YN7" firstAttribute="centerY" secondItem="i73-Il-hGa" secondAttribute="centerY" id="pIP-QG-zOk"/>
+                                                <constraint firstItem="DuS-ml-X5z" firstAttribute="centerY" secondItem="i73-Il-hGa" secondAttribute="centerY" id="phy-gU-EOE"/>
+                                                <constraint firstItem="PiV-Dx-srv" firstAttribute="centerY" secondItem="i73-Il-hGa" secondAttribute="centerY" id="pyT-d2-WIZ"/>
+                                                <constraint firstItem="VTo-E2-Ng4" firstAttribute="leading" secondItem="hCb-Gj-5pa" secondAttribute="trailing" constant="8" id="qBH-NI-qMI"/>
+                                                <constraint firstItem="DuS-ml-X5z" firstAttribute="leading" secondItem="hCb-Gj-5pa" secondAttribute="trailing" constant="8" id="raS-tR-5zf"/>
+                                                <constraint firstAttribute="trailing" secondItem="DuS-ml-X5z" secondAttribute="trailing" constant="8" id="sNb-fi-R4A"/>
+                                                <constraint firstItem="DuS-ml-X5z" firstAttribute="leading" secondItem="Nyg-iD-YN7" secondAttribute="trailing" constant="5" id="smI-AO-eM2"/>
+                                                <constraint firstItem="SBS-hO-exh" firstAttribute="top" relation="greaterThanOrEqual" secondItem="qxn-JG-vE0" secondAttribute="bottom" constant="3" id="tWp-TM-1Re"/>
+                                                <constraint firstItem="VTo-E2-Ng4" firstAttribute="top" secondItem="uxO-NW-Z4g" secondAttribute="top" constant="16" id="vAF-Jj-HcJ"/>
+                                                <constraint firstItem="DuS-ml-X5z" firstAttribute="leading" secondItem="Nyg-iD-YN7" secondAttribute="trailing" constant="8" id="yHS-8b-1hN"/>
+                                                <constraint firstItem="SBS-hO-exh" firstAttribute="top" secondItem="VTo-E2-Ng4" secondAttribute="bottom" constant="3" id="zDw-d1-Ina"/>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="5IW-ab-HRe"/>
+                                                    <exclude reference="NAy-U3-rA9"/>
+                                                    <exclude reference="EpY-RJ-sfb"/>
+                                                    <exclude reference="RTn-zq-hYx"/>
+                                                    <exclude reference="cgo-g8-3DG"/>
+                                                    <exclude reference="phy-gU-EOE"/>
+                                                    <exclude reference="sNb-fi-R4A"/>
+                                                    <exclude reference="smI-AO-eM2"/>
+                                                    <exclude reference="yHS-8b-1hN"/>
+                                                    <exclude reference="RUh-As-kO4"/>
+                                                    <exclude reference="zDw-d1-Ina"/>
+                                                </mask>
+                                            </variation>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="likeCountLabel" destination="Nyg-iD-YN7" id="mJh-Xr-fgz"/>
+                                            <outlet property="nameLabel" destination="VTo-E2-Ng4" id="hZV-KS-d2H"/>
+                                            <outlet property="profileImageView" destination="hCb-Gj-5pa" id="nTB-Ew-YNj"/>
+                                            <outlet property="retweetCountLabel" destination="PiV-Dx-srv" id="9sK-CR-CsJ"/>
+                                            <outlet property="screennameLabel" destination="DuS-ml-X5z" id="Og1-Wu-CaF"/>
+                                            <outlet property="timeLabel" destination="qxn-JG-vE0" id="0jn-N1-2T1"/>
+                                            <outlet property="tweetLabel" destination="SBS-hO-exh" id="pVq-EN-Gu9"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="144-1v-mqa">
@@ -60,6 +196,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="tableView" destination="JjD-Qz-zB8" id="1iL-gf-vdC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EUF-kK-twV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
